# COTS-Star-Tracker

./: .gitignore  MANIFEST.in  setup.cfg
py_src/cots_star_tracker/: __init__.py  cam_matrix.py  ground.py  imagetest.py  main.py  rpi_core.py  star_cat.py  support_functions.py  test_flight.py
py_src/cots_star_tracker_tools/: astrometry_output_comparison.py  create_darkframe.py  output_comparison.py  quat_output_comparison.py  star_catalog_creator.py
py_src/cots_star_tracker_tools/camera_calibration/charuco/: charuco_cam_cal.py
