[metadata]
name = cots_star_tracker
version = 1.1
author = NASA
author_email = "samuel.m.pedrotty@nasa.gov"
description = Open-source framework intended to allow inexperienced users to use COTS cameras and computers to estimate the inertial attitude of the captured images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nasa/COTS-Star-Tracker

[options]
package_dir =
   = py_src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    opencv-contrib-python
include_package_data = True

[options.packages.find]
where = py_src
